[FIXED] Reduct z-index topic name.

--- a/mm_web_app/styles/pages/_stream.scss
+++ b/mm_web_app/styles/pages/_stream.scss
@@ -753,7 +753,7 @@ img {
       }
       .mix-tag {
         @include abs-pos ($top: 0, $right: 15px, $bottom: auto, $left: auto);
-        z-index: 1000;
+        z-index: 500;
       }
     }
     .caption {
